<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">OpenAIInt</string>
    <string name="type_your_message">Type your message here</string>
    <string name="send">Send</string>
    <string name="search_by_timestamp" tools:ignore="Typos">Search by timestamp (yyyyMMddHHmmss)</string>
    <string name="search">Search</string>
    <string name="save_chat_history">Save Chat History</string>
</resources>

